Bug 1443152 - Update to cbindgen 0.5.2. r=rhunt

MozReview-Commit-ID: COIPhZvMJK

--HG--
extra : rebase_source : 9687211e6bda9b306d8cdf522145eee132601b18